--- a/index.html
+++ b/index.html
@@ -1,27 +1,31 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
 <title> Tudo sobre google glas </title>
   <link rel="stylesheet" type="text/css" href="_css/estilo.css"/>
 </head>
 <body>
-<div id="interface"
+<div id="interface">
      <header id="cabecalho">
      <hgroup>
      <h1>Google Glass</h1>
    <h2>A revolução do Google está chegando</h2>
      </hgroup>
 
-     <img src="_imagens/glass-oculos-preto-peq.png">
+     <img id="icone" src="_imagens/glass-oculos-preto-peq.png">
+         <nav id="menu">
+         <h1></h1>
+    <ul type="disc">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="specs.html"> Especificações</a></li>
+        <li><a href="fotos.html">Fotos</a></li>
+        <li><a href="multimidia.html">Multimídia</li>
+        <li><a href="fale-conosco.html">Fale conosco</a></li>
 
-Menu Principal
-- Home
-- Especificações
-- Fotos
-- Multimídia
-- Fale conosco
-      </header>
+    </ul>
+</nav>
+     </header>
 <hgroup>
 <h3>Tecnologia > &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Inovações</h3>
 <h1>Saiba tudo sobre o Google Glass</h1>
@@ -29,7 +33,7 @@ Menu Principal
 <h3>Atualizado em 23/Abril/2013</h3>
 </hgroup>
 <h1 style="text-align:center"> o que é</h1>
-<p>O <b>Google Glass</b> é um acessório em forma de óculos que possibilita a interação dos usuários com diversos conteúdos em realidade aumentada. Também chamado de <i>Project Glass</i>, o eletrônico é capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar vídeoconferências. Seu lançamento está previsto para 2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o <em>Google Glass</em> encontra-se em fase de testes e já possui um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes anti-furto e de desbloqueio de tela para o acessório.</p>
+<p>O <b>Google Glass</b> é um acessório em forma de óculos que possibilita a interação dos usuários com diversos conteúdos em realidade aumentada. Também chamado de <a href="http://glass.google.com" target="_blank">Project Glass</a>, o eletrônico é capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar vídeoconferências. Seu lançamento está previsto para 2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o <em>Google Glass</em> encontra-se em fase de testes e já possui um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes anti-furto e de desbloqueio de tela para o acessório.</p>
 <figure class="foto-legenda">
 <img src="_imagens/glass-quadro-homem-mulher.jpg"/>
     <figcaption>
